--- a/styles/style.css
+++ b/styles/style.css
@@ -24,6 +24,7 @@
     min-height: 74px;
     margin: 45px auto 0 auto;
     position: relative;
+    border-bottom: 2px solid #545454;
     
   }
   @media screen and (max-width: 880px) {
@@ -31,6 +32,7 @@
         max-width: 320px;
         min-height: 56px;
         margin: 28px auto 0 auto;
+        border-bottom: 2px solid #545454;
     }
   }
   .header__logo {
@@ -45,15 +47,6 @@
   width: 103.736px;
   height: 24.396px;
   right: 27px;
-    }
-}
-.header__line {
-    border-bottom: #545454;
-    max-width: 880px;
-}
-@media screen and (max-width: 880px) {
-    .header__line {
-        max-width: 320px;
     }
 }
   .content {
@@ -164,6 +157,7 @@
     background-position: center;
     border: 1px solid #FFF;
     margin: 0;
+    cursor: pointer;
     
    }
    .profile__button:hover {
@@ -214,6 +208,7 @@
     min-height: 50px;
     align-self: center;
     background-repeat: no-repeat;
+    cursor: pointer;
    }
    .profile__add-button:hover {
     opacity: 0.6;
@@ -293,6 +288,7 @@
     margin: 0;
     align-self: flex-end;
     border: 0;
+    cursor: pointer;
   }
   @media screen and (max-width: 880px) {}
 
@@ -317,15 +313,19 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    visibility: hidden;
-   
-    
+    display: none;
 
+    
+   
   }
+  .popup__opened {
+    display: flex;
+  }
+ 
   @media screen and (max-width: 880px) {}
 
   .popup__container {
-    padding-top: 123px;
+    
     font-family: 'Inter';
     background-color: #FFF;
     max-width: 430px;
@@ -337,6 +337,7 @@
     border-radius: 10px; 
     box-shadow: 0px 0px 25px 0px rgba(0, 0, 0, 0.15);
     position: relative;
+    box-sizing: border-box;
   
   }
   @media screen and (max-width: 880px) {
@@ -347,7 +348,8 @@
     }
   }
 
-  .inputs {
+  .popup__info {
+    max-width: 358px;                                                                   
     font-family: 'Inter';
     min-height: 27px;
     display: flex;
@@ -357,20 +359,21 @@
     padding-bottom: 48px;
     box-shadow: none;
     border-bottom: #545454;
-    border: 0;
+    border: none;
     padding-left: 0;
     padding-right: 0;
     margin: 0;
   }
   @media screen and (max-width: 880px) {
     .inputs {
+        max-width: 238px;
         padding-top: 75px;
         padding-bottom: 45px;
         gap: 30px;
     }
   }
 
-  .inputs-text {
+  .popup__input {
     color: #000;
     font-size: 14px;
     font-style: normal;
@@ -381,11 +384,14 @@
     padding: 0 0 13px 0;
     border-bottom: 1px solid #545454;
     border-bottom-color: #545454;
-    
-    
+    min-width: 358px;
 
   }
-  @media screen and (max-width: 880px) {}
+  @media screen and (max-width: 880px) {
+    .popup__input {
+    min-width: 238px;
+    }
+  }
 
   .popup__close {
     color: #FFF;
@@ -395,6 +401,7 @@
     position: absolute;
     top: -42px;
     right: -44px;
+    cursor: pointer;
   }
   .popup__close:hover {
     opacity: 0.6;
@@ -425,7 +432,12 @@
     font-weight: 400;
     line-height: normal;
     padding: 0;
+    cursor: pointer;
 
+  }
+  .popup__button:hover {
+    border-radius: 2px;
+    opacity: 0.800000011920929;
   }
   @media screen and (max-width: 880px) {
     .popup__button {
