--- a/blocks/profile/__button/profile__button.css
+++ b/blocks/profile/__button/profile__button.css
@@ -4,7 +4,7 @@
     position: absolute;
     right: 0px;
     top: 10px;
-    background-image: url(/images/Edit-Button.svg);
+    background-image: url(../../../images/Edit-Button.svg);
     background-color: #000;
     background-repeat: no-repeat;
     background-position: center;
