--- a/blocks/element/__like/element__like.css
+++ b/blocks/element/__like/element__like.css
@@ -1,5 +1,5 @@
 .element__like {
-    background-image: url(/images/Group.svg);
+    background-image: url(../../../images/Group.svg);
     color: #000;
     width: 22px;
     height: 19px;
