--- a/blocks/element/__like/_aktive/element__like_aktive.css
+++ b/blocks/element/__like/_aktive/element__like_aktive.css
@@ -1,4 +1,4 @@
 .element__like_active {
-    background-image: url(/images/Union.svg);
+    background-image: url(../../../images/Union.svg);
     color: #000;
 }
