--- a/blocks/profile/__add-button/profile__add-button.css
+++ b/blocks/profile/__add-button/profile__add-button.css
@@ -1,5 +1,5 @@
 .profile__add-button {
-    background-image: url(/images/Add-Button.svg);
+    background-image: url(../../../images/Add-Button.svg);
     background-size: 22px 22px;
     background-position: center;
     padding: 0;
