--- a/blocks/element/__content/element__content.css
+++ b/blocks/element/__content/element__content.css
@@ -1,8 +1,7 @@
 .element__content {
     display: flex;
+    max-width: 246px;
     justify-content: space-between;
-    padding: 25px 15px 31px 21px;
-    text-overflow: ellipsis;
-    white-space: nowrap;
-    overflow: hidden;
+    padding: 25px 20px 31px 21px;
+    
 }
