--- a/blocks/element/__like/element__like.css
+++ b/blocks/element/__like/element__like.css
@@ -1,11 +1,11 @@
 .element__like {
-    background-image: url(../../../images/Group.svg);
     color: #000;
     width: 22px;
+    background-repeat: no-repeat;
     height: 19px;
+    background-image: url(../../../images/Group.svg);
     padding: 0;
     margin: 0;
-    align-self: flex-end;
     border: 0;
     cursor: pointer;
 }
