--- a/blocks/element/__title/element__title.css
+++ b/blocks/element/__title/element__title.css
@@ -1,9 +1,12 @@
 .element__title {
     color: #000;
     font-family: Inter;
-    font-size: 23px;
+    font-size: 24px;
     font-style: normal;
     font-weight: 900;
-    line-height: normal;
+    line-height: 23px;
     margin: 0;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow: hidden;
 }
