--- a/blocks/element/element.css
+++ b/blocks/element/element.css
@@ -1,7 +1,6 @@
 .element {
     width: 282px;
-    min-height: 361px;
     background-color: #FFF;
-    border-radius: 10%;
+    border-radius: 10px;
     margin: 0;
 }
