--- a/blocks/footer/__copyright/footer__copyright.css
+++ b/blocks/footer/__copyright/footer__copyright.css
@@ -1,6 +1,5 @@
 .footer__copyright {
-    position: absolute;
-    left: 0;
+    padding-left: 0;
     max-width: 318px;
     color: #545454;
     font-family: Inter;
