--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -10,10 +10,14 @@
     -moz-text-size-adjust: 100%;
     text-rendering: optimizeLegibility;
     box-sizing: border-box;
+    padding-top: 45px;
+    padding-bottom: 60px;
 }
 
 @media screen and (max-width: 880px) {
     .page {
         min-width: 320px;
+        padding-top: 28px;
+        padding-bottom: 36px;
     }
 }
