--- a/blocks/profile/__info/profile__info.css
+++ b/blocks/profile/__info/profile__info.css
@@ -1,19 +1,24 @@
 .profile__info {
-    padding-left: 22.5px;
+    padding-top: 10px;
+    padding-left: 30px;
     display: flex;
-    max-width: 336px;
-    flex-wrap: wrap;
+    flex-direction: column;
+    min-width: 336px;
     align-items: baseline;
     text-align: left;
     margin: 0;
     position: relative;
+    gap: 16px;
 }
 
 @media screen and (max-width: 880px) {
     .profile__info {
-        padding-top: 22.25px;
+        padding-top: 28.25px;
         padding-left: 0;
-        max-width: 282px;
-        flex-direction: column;
+        min-width: 282px;
+        text-align: center;
+        gap: 14px;
+        padding-bottom: 31px;
+        
     }
 }
