--- a/blocks/profile/__subtitle/profile__subtitle.css
+++ b/blocks/profile/__subtitle/profile__subtitle.css
@@ -6,17 +6,17 @@
     font-weight: 400;
     line-height: normal;
     margin: 0;
-    padding-top: 16px;
+   
 }
 
 @media screen and (max-width: 880px) {
     .profile__subtitle {
         display: flex;
         width: 282px;
-        height: 14px;
+        font-size: 14px;
+        font-weight: 400;
+        line-height: normal;
         text-align: center;
         justify-content: center;
-        padding-bottom: 36px;
-        padding-top: 14px;
     }
 }
