--- a/blocks/profile/profile.css
+++ b/blocks/profile/profile.css
@@ -2,10 +2,12 @@
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+    padding-top: 40.05px;
 }
 
 @media screen and (max-width: 880px) {
     .profile {
         flex-direction: column;
+        padding-top: 42.05px;
     }
 }
