--- a/blocks/profile/__subtitle/profile__subtitle.css
+++ b/blocks/profile/__subtitle/profile__subtitle.css
@@ -12,7 +12,7 @@
 @media screen and (max-width: 880px) {
     .profile__subtitle {
         display: flex;
-        width: 282px;
+        width: 100%;
         font-size: 14px;
         font-weight: 400;
         line-height: normal;
