--- a/blocks/profile/__info-box/profile__info-box.css
+++ b/blocks/profile/__info-box/profile__info-box.css
@@ -1,4 +1,4 @@
-.profile__info_box {
+.profile__info-box {
     width: 100%;
     display: flex;
     flex-direction: row;
@@ -8,7 +8,7 @@
 }
 
 @media screen and (max-width: 880px) {
-    .profile__info_box {
+    .profile__info-box {
         justify-content: flex-end;
         padding-right: 23px;
         gap: 12px;  
