--- a/blocks/element/__image/element__image.css
+++ b/blocks/element/__image/element__image.css
@@ -2,5 +2,6 @@
     max-width: 100%;
     border-top-left-radius: 10px;
     border-top-right-radius: 10px;
-    min-height: 282px;
+    height: 282px;
+    object-fit: cover;
 }
