--- a/blocks/element/__like/element__like.css
+++ b/blocks/element/__like/element__like.css
@@ -2,12 +2,14 @@
     color: #000;
     width: 22px;
     background-repeat: no-repeat;
+    background-color: rgba(255, 255, 255, 0%);
     height: 19px;
     background-image: url(../../../images/Group.svg);
     padding: 0;
-    margin: 0;
+    margin: 6px 0 0 0;
     border: 0;
     cursor: pointer;
+    object-fit: cover;
 }
 
 .element__like:hover {
