--- a/blocks/element/__title/element__title.css
+++ b/blocks/element/__title/element__title.css
@@ -4,7 +4,7 @@
     font-size: 24px;
     font-style: normal;
     font-weight: 900;
-    line-height: 23px;
+    line-height: normal;
     margin: 0;
     text-overflow: ellipsis;
     white-space: nowrap;
