--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -3,7 +3,7 @@
     max-width: 880px;
     margin: 0 auto;
     padding-bottom: 39px;
-    border-bottom: 1px solid rgba(84, 84, 84, 0.699999988079071);
+    border-bottom: 1px solid rgba(84, 84, 84, 0.7);
 }
 
 @media screen and (max-width: 880px) {
