--- a/blocks/popup/__input/popup__input.css
+++ b/blocks/popup/__input/popup__input.css
@@ -8,13 +8,13 @@
     border: none;
     padding: 0 0 13px 0;
     border-bottom: 1px solid rgba(0, 0, 0, 0.20000000298023224);
-    border-bottom-color: #545454;
-    min-width: 358px;
+    max-width: 358px;
+    
 
 }
 
 @media screen and (max-width: 880px) {
     .popup__input {
-        min-width: 238px;
+        max-width: 238px;
     }
 }
