--- a/blocks/popup/__title/popup__title.css
+++ b/blocks/popup/__title/popup__title.css
@@ -1,6 +1,6 @@
 .popup__title {
     margin: 0;
-    text-align: center;
+    text-align: start;
     justify-content: center;
     color: #000;
     font-size: 24px;
