--- a/blocks/profile/__info-box/profile__info-box.css
+++ b/blocks/profile/__info-box/profile__info-box.css
@@ -3,14 +3,14 @@
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    align-items: last baseline;
+    align-items: center;
     gap: 18px;
 }
 
 @media screen and (max-width: 880px) {
     .profile__info-box {
-        justify-content: flex-end;
-        padding-right: 23px;
-        gap: 12px;  
+        justify-content: center;
+        gap: 11px; 
+       
     }
 }
