--- a/blocks/profile/__info-container/profile__info-container.css
+++ b/blocks/profile/__info-container/profile__info-container.css
@@ -7,5 +7,7 @@
 @media screen and (max-width: 880px) {
     .profile__info-container {
         flex-direction: column;
+        max-width: 282px;
+    
     }
 }
