--- a/blocks/profile/__info/profile__info.css
+++ b/blocks/profile/__info/profile__info.css
@@ -1,22 +1,22 @@
 .profile__info {
-    padding-top: 10px;
+    padding-top: 5px;
     padding-left: 30px;
     display: flex;
     flex-direction: column;
-    max-width: 336px;
+    min-width: 336px;
     align-items: baseline;
     text-align: left;
     margin: 0;
-    gap: 16px;
+    gap: 6px;
 }
 
 @media screen and (max-width: 880px) {
     .profile__info {
-        padding-top: 28.25px;
+        padding-top: 25.25px;
         padding-left: 0;
-        max-width: 282px;
+        min-width: 282px;
         text-align: center;
-        gap: 14px;
+        gap: 8px;
         padding-bottom: 31px;
         
     }
