--- a/blocks/profile/__subtitle/profile__subtitle.css
+++ b/blocks/profile/__subtitle/profile__subtitle.css
@@ -5,18 +5,19 @@
     font-style: normal;
     font-weight: 400;
     line-height: normal;
+    max-width: 336px;
     margin: 0;
-   
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow: hidden;
 }
 
 @media screen and (max-width: 880px) {
     .profile__subtitle {
-        display: flex;
-        width: 100%;
         font-size: 14px;
-        font-weight: 400;
-        line-height: normal;
-        text-align: center;
-        justify-content: center;
+        text-align: center;        
+        max-width: 228px;
+        margin: 0 auto 0 auto;
+        
     }
 }
