--- a/blocks/profile/__title/profile__title.css
+++ b/blocks/profile/__title/profile__title.css
@@ -5,16 +5,21 @@
     font-size: 42px;
     font-style: normal;
     font-weight: 500;
-    line-height: 39px;
+    line-height: 48px;
     margin: 0;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow: hidden;
 }
 
 @media screen and (max-width: 880px) {
     .profile__title {
+        max-width: 189px;
         text-align: center;
         align-self: center;
         font-size: 27px;
-        font-weight: 500;
-        line-height: 26px;
+        line-height: normal;
+        padding-left: 24px;
+        
     }
 }
