--- a/blocks/popup/__close/popup__close.css
+++ b/blocks/popup/__close/popup__close.css
@@ -19,6 +19,8 @@
 
 @media screen and (max-width: 880px) {
     .popup__close {
+        width: 20px;
+        height: 20px;
         top: -41px;
         right: 2px;
     }
