--- a/blocks/profile/__add-button/profile__add-button.css
+++ b/blocks/profile/__add-button/profile__add-button.css
@@ -10,6 +10,7 @@
     align-self: center;
     background-repeat: no-repeat;
     cursor: pointer;
+    border-radius: 2px;
 }
 
 .profile__add-button:hover {
