--- a/blocks/profile/__info-box/profile__info-box.css
+++ b/blocks/profile/__info-box/profile__info-box.css
@@ -4,7 +4,8 @@
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
-    gap: 18px;
+    box-sizing: border-box;
+    
 }
 
 @media screen and (max-width: 880px) {
