--- a/blocks/element/__title/element__title.css
+++ b/blocks/element/__title/element__title.css
@@ -6,6 +6,7 @@
     font-weight: 900;
     line-height: normal;
     margin: 0;
+    max-width: 219px;
     text-overflow: ellipsis;
     white-space: nowrap;
     overflow: hidden;
