--- a/blocks/popup/__input/popup__input.css
+++ b/blocks/popup/__input/popup__input.css
@@ -7,7 +7,7 @@
     align-items: flex-start;
     border: none;
     padding: 0 0 13px 0;
-    border-bottom: 1px solid rgba(0, 0, 0, 0.20000000298023224);
+    border-bottom: 1px solid rgba(0, 0, 0, 0.2);
     max-width: 358px;
     
 
