--- a/blocks/element/__like/_active/element__like_active.css
+++ b/blocks/element/__like/_active/element__like_active.css
@@ -1,4 +1,5 @@
 .element__like_active {
-    background-image: url(../../../images/Union.svg);
+    background-image: url(../../../../images/heard_black.svg);
     color: #000;
+    
 }
