--- a/blocks/element/__delete/element__delete.css
+++ b/blocks/element/__delete/element__delete.css
@@ -3,8 +3,8 @@ background-image: url(../../../images/trashcan.svg);
 width: 18px;
 height: 19px;
 position: absolute;
-top: 0;
-right: 0;
+top: 19.5px;
+right: 19.5px;
 margin: 0;
 padding: 0;
 background-color: rgba(255, 255, 255, 0%);
