--- a/blocks/popup/__caption/popup__caption.css
+++ b/blocks/popup/__caption/popup__caption.css
@@ -1,3 +1,11 @@
-.popup__caption {
-    
+.popup__caption {  
+    color: #FFF;
+    font-family: Inter;
+    font-size: 12px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+    text-align: left;
+    margin-top: 10px;
+    margin-bottom: 0;
 }
