--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -9,5 +9,8 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    display: none;
+    display: flex;
+    visibility: hidden;
+    opacity: 0;
+    transition: visibility 0s, opacity 0.5s linear;
 }
