--- a/blocks/popup/__button/popup__button.css
+++ b/blocks/popup/__button/popup__button.css
@@ -4,7 +4,7 @@
     background: none;
     border: none;
     box-shadow: none;
-    background-color: #000;
+    background-color: rgba(0, 0, 0, 1);
     min-width: 358px;
     min-height: 50px;
     display: flex;
