--- a/src/blocks/popup/__close/popup__close.css
+++ b/src/blocks/popup/__close/popup__close.css
@@ -1,6 +1,6 @@
 .popup__close {    
     padding: 0;
-    background-image: url(../../../images/Close\ Icon.svg);
+    background-image: url(/images/Close\ Icon.svg);
     background-color: rgba(0, 0, 0, 0%);
     align-self: flex-end;
     width: 32px;
