--- a/src/blocks/profile/__button/profile__button.css
+++ b/src/blocks/profile/__button/profile__button.css
@@ -2,7 +2,7 @@
     width: 24px;
     height: 24px;
     padding: 0;
-    background-image: url(../../../images/Edit-Button.svg);
+    background-image: url(/images/Edit-Button.svg);
     background-color: #000;
     background-repeat: no-repeat;
     background-position: center;
