--- a/src/blocks/element/__delete/element__delete.css
+++ b/src/blocks/element/__delete/element__delete.css
@@ -1,5 +1,5 @@
 .element__delete {
-background-image: url(/images/trashcan.svg);
+background-image: url(../../../images/trashcan.svg);
 width: 18px;
 height: 19px;
 position: absolute;
