--- a/src/blocks/element/__like/_active/element__like_active.css
+++ b/src/blocks/element/__like/_active/element__like_active.css
@@ -1,5 +1,5 @@
 .element__like_active {
-    background-image: url(/images/heard_black.svg);
+    background-image: url(../../../../images/heard_black.svg);
     color: #000;
     
 }
