--- a/src/blocks/element/__like/element__like.css
+++ b/src/blocks/element/__like/element__like.css
@@ -4,7 +4,7 @@
     background-repeat: no-repeat;
     background-color: rgba(255, 255, 255, 0%);
     height: 19px;
-    background-image: url(/images/Group.svg);
+    background-image: url(../../../images/Group.svg);
     padding: 0;
     margin: 6px 0 0 0;
     border: 0;
