--- a/src/blocks/popup/__close/popup__close.css
+++ b/src/blocks/popup/__close/popup__close.css
@@ -1,6 +1,6 @@
 .popup__close {    
     padding: 0;
-    background-image: url(../../../images/Close\ Icon.svg);
+    background-image: url(../../../images/Close_Icon.svg);
     background-color: rgba(0, 0, 0, 0%);
     align-self: flex-end;
     width: 32px;
@@ -19,7 +19,7 @@
 
 @media screen and (max-width: 880px) {
     .popup__close {
-        background-image: url(../../../images/Close\ Icon-mini.svg);
+        background-image: url(../../../images/Close_Icon-mini.svg);
         width: 20px;
         height: 20px;
         top: -41px;
